# financial_analyst_agent

./: .gitignore  pyproject.toml
db/: chroma.sqlite3
financial_analyst_agent/: run.py  schemas.py
financial_analyst_agent/configs/: agent_deployments.json
output-files/: final_report_20241221_174818.md  final_report_20241221_184850.md  final_report_20241221_185703.md  final_report_20241221_190554.md  financial_analysis_20241221_174818.md  financial_analysis_20241221_184505.md  financial_analysis_20241221_184850.md  financial_analysis_20241221_185703.md  financial_analysis_20241221_190554.md  market_research_20241221_174818.md  market_research_20241221_184850.md  market_research_20241221_185703.md  market_research_20241221_190554.md
